--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,11 +1,3 @@
-/* Colour variables
-
-grey light: #ebe9e7
-grey dark: #595756
-blue dark: #1b2447
-green: #1fdb03
-*/
-
 * {
 	 box-sizing: border-box;
 }
@@ -41,7 +33,6 @@ body {
        border-left: 5px solid green;
        padding: 15px 30px 15px 25px;
        color: yellow;
-       content: "----";
      }
 
     a:hover {
@@ -60,11 +51,8 @@ body {
        position: relative;
        top: 2px;
      }
-/*
-     .fa:active, .fa:hover {
-       color: yellow;
-     } */
 
      a:hover > .fa {
        color: yellow;
+			 transition: all 0.3s ease-in-out;
      }
